
12. New: tilde works with tab completions on files and commands..

13. Fix: tab completion of a single directory now works correctly.

14. New: basic sudo tab completion handling.

15. Fix: tab completion of a command no longer adds "./" where there is none.

16. Change: homonymn checking no longer applies to unstructured scripts.

CHANGES SINCE 2.4.1

17. New: umask built-in command (not octal values).

18. Fix: issue with the number "2" in shell words treated as a number fixed.

19. Fix: "return" no longer produces an error with pragma annotate.

20. Change: style issues no longer enforced for unstructured scripts.

21. New: btree_io.recover, hash_io.recover.

22. New: pragma volatile can have a timeout duration in seconds.

23. New: opengl_third, opengl_fourth examples.

24. New: strings.levenshtein, strings.soundex, strings.replace_all, strings.starts, strings.ends, strings.word_count, strings.compare, strings.index_set.

25. Fix: to_hexadecimal_digits no longer allowed with pragma ada_95.

26. New: l8n package. [negative tests needed]

27. New: hashed_maps package.

28. New: vectors package.[not complete, tests, docs needed]

29. New: case in statement can have multiple test variables and return expressions. [change into a relation function]

30. New: case with multiple variables (like rust, python, and some other languages).

31. New: box <> allowed in case when conditions. [negative tests needed]

32. New: demonstration examples contracts, design_examples, scheduler, side_effects.

33. Fix: parent contracts which raise an exception now propogate the exception.

34. Change: Improved some error messages for context and ease of understanding.

35. Fix: restored a unreachable code by raise test removed when raise..when was added.

36. Fix: [Blady] various OS/X changes.

37. Fix: [Zhu] Slackware / GCC 11 fix.

38. New: Support for Raspian / Debian 11.1 (Bullseye) on Raspberry Pi.
