@@ -11,6 +11,10 @@ These are new issues identified but not entered into the outstanding bug list
 Priority Issues (Fix These First)
 ---------------------------------
 
+- remove error functions moved to communications
+- templates
+  - yaml substitutions
+  - templates that are not for HTML
 - eof handling in expect symbol (i.e. reached end-of-file)
 - bug: in parser-decl-as, an include file that starts with a blank line will
   cause the compiler to raise an exception.
