@@ -345,6 +345,8 @@ begin
         fullErrorMessage := "<!-- " & templateErrorHeader & " " & convertToPlainText( fullErrorMessage ) & " -->";
      when textTemplate =>
         fullErrorMessage := convertToPlainText( fullErrorMessage, with_lf );
+     when yamlTemplate =>
+        fullErrorMessage := "# " & convertToPlainText( fullErrorMessage );
      when noTemplate | jsonTemplate =>
         fullErrorMessage := convertToPlainText( fullErrorMessage );
      end case;
@@ -566,6 +568,8 @@ begin
         fullTemplateErrorMessage := "<!-- " & templateErrorHeader & " " & convertToPlainText( fullErrorMessage ) & " -->";
      when textTemplate =>
         fullTemplateErrorMessage := convertToPlainText( fullErrorMessage, with_lf );
+     when yamlTemplate =>
+        fullTemplateErrorMessage := "# " & convertToPlainText( fullErrorMessage );
      when noTemplate | jsonTemplate =>
         fullTemplateErrorMessage := convertToPlainText( fullErrorMessage );
      end case;
@@ -842,6 +846,8 @@ begin
         fullTemplateErrorMessage := "/* " & templateErrorHeader & " " & convertToPlainText( fullErrorMessage ) &  " */";
      when xmlTemplate =>
         fullTemplateErrorMessage := "<!-- " & templateErrorHeader & " " & convertToPlainText( fullErrorMessage ) & " -->";
+     when yamlTemplate =>
+        fullTemplateErrorMessage := "# " & convertToPlainText( fullErrorMessage );
      when noTemplate | textTemplate | jsonTemplate =>
         fullTemplateErrorMessage := convertToPlainText( fullErrorMessage );
      end case;
@@ -999,6 +1005,8 @@ begin
         ourFullTemplateErrorMessage := "/* " & templateErrorHeader & " " & convertToPlainText( ourFullErrorMessage ) &  " */";
      when xmlTemplate =>
         fullTemplateErrorMessage := "<!-- " & templateErrorHeader & " " & convertToPlainText( ourFullErrorMessage ) & " -->";
+     when yamlTemplate =>
+        fullTemplateErrorMessage := "# " & convertToPlainText( ourFullErrorMessage );
      when noTemplate | textTemplate | jsonTemplate =>
         ourFullTemplateErrorMessage := convertToPlainText( ourFullErrorMessage );
      end case;
@@ -1078,6 +1086,8 @@ begin
         put( "/* " & templateErrorHeader & " " & convertToPlainText( fullMsg ) &  " */" );
      when xmlTemplate =>
         put( "<!-- " & templateErrorHeader & " " & convertToPlainText( fullMsg ) & " -->" );
+     when yamlTemplate =>
+        put( "# " & convertToPlainText( fullMsg ) );
      when noTemplate | textTemplate | jsonTemplate =>
         put( convertToPlainText( fullMsg ) );
      end case;
