@@ -208,7 +208,8 @@ allowLowPriorityTodosForRelease  : boolean := false; -- pragma suppress
 allowAllTodosForRelease          : boolean := false; -- pragma suppress
 
 type templateTypes is (noTemplate, htmlTemplate, textTemplate,
-cssTemplate, jsTemplate, jsonTemplate, wmlTemplate, xmlTemplate );
+cssTemplate, jsTemplate, jsonTemplate, wmlTemplate, xmlTemplate,
+yamlTemplate );
 
 depreciatedMsg   : unbounded_string := null_unbounded_string; -- pragma dep.
 annotationsFound : boolean := false; -- pragma annotations_not_optional
